Version 1.7 -Eta Carinae-


* [NEW] Weblogs: admin can select what columns to list in the blog listing,
  the blog owner can be listed as an avatar, link or text. Improved the look
  and fell of the blog listing.
* [NEW] WYSIWYG editor added for blog posts, you can now edit an HTML post
  for a blog using a full-featured Wysiwyg editor (IE only in 1.7)
* [NEW] Workflow engine added. Create processes, monitor processes and
  execute processes. Processes are mapped to PHP scripts. Please read
  the workflow documentation for a detailed overview of the Workflow engine.
* [NEW] The special Smarty plugin {helplink page="PageName"} can be used to create
  a link that will display a wiki page as a help popup. This allows your site to
  create an online help system based on Wiki pages. 

Version 1.6 -Tau Ceti-

* [NEW] Install script added, unzip the files and point your browser to
  tiki-install.php
* [NEW] Initial LDAP support has been added using PEAR::Auth.  This will be
  expanded in future releases and is completely optional.
* [NEW] Graphviz integration, a plugin can be used to visualize a navigable 
  graph of a subwiki indicating a page to start and depth level. Also included 
  is tiki-wiki_graph.php?page=Name&level=X to render the graph (non-navigable) 
  as an image anywhere in Tiki. 
* [NEW] Users with the right permission can do "minor" edits on wiki pages
  minor edits are not reflected in the history nor are notified by
  email to users "watching" the page.
* [NEW] Forums: Option to allow wiki markup in forum/comment posts.
* [NEW] Forums: the topic description can be disabled when browsing forums.
* [NEW] Checkboxes added in page history to remove many versions of a page.
* [NEW] View page source option from page history for any version. 
* [NEW] Inter wiki links, admin can define URLS in the format 
  http://www.example.com?page=$page or similar ascociating the URL with 
  a name then the syntax ((Wiki:name)) can be used to link to a page 